[package]
name = "mystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25.0"
clap = { version = "4.4.6", features = ["derive"] }
rpassword = "7.2"
tui-textarea = { version = "0.2.2", features = ["crossterm"] }
chrono = "0.4.31"